force-app/main/default/objects/Change_Order_Config_V2__mdt/Change_Order_Config_V2__mdt.object-meta.xml
<CustomObject>
    <label>Change Order Config V2</label>
    <pluralLabel>Change Order Config V2</pluralLabel>
</CustomObject>