force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>