force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Force_Next__c.field-meta.xml
<CustomField>
    <fullName>Force_Next__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Next</label>
    <type>Checkbox</type>
</CustomField>