force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>