force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>