force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Question_Description__c.field-meta.xml
<CustomField>
    <fullName>Question_Description__c</fullName>
    <label>Question Description</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>