force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Question_Hint__c.field-meta.xml
<CustomField>
    <fullName>Question_Hint__c</fullName>
    <label>Question Hint</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>