force-app/main/default/objects/Change_Order_Config_V2__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>MultiPicklist</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>QuoteLineGrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>