force-app/main/default/objects/Change_Order_Config_V2__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Action__c</columns>
    <columns>Active__c</columns>
    <columns>Force_Next__c</columns>
    <columns>Option__c</columns>
    <columns>Order__c</columns>
    <columns>Question__c</columns>
    <columns>Question_Description__c</columns>
    <columns>Question_Hint__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>